--- a/README
+++ b/README
@@ -7,8 +7,9 @@ backend SMT solver.
 
 Release Notes:
 
-0.1.4    ???
+0.1.4    11/22/10
 
+- Bugfix: verification programming trimming: expressions in assertions in if statements not captured.
 - Better annotation for assertions.
 
 0.1.3    11/18/10
