--- a/README
+++ b/README
@@ -7,6 +7,10 @@ backend SMT solver.
 
 Release Notes:
 
+0.1.5    11/23/10
+
+- Loosened mtl requirements (mtl < 2.1).
+
 0.1.4    11/22/10
 
 - Bugfix: verification programming trimming: expressions in assertions in if statements not captured.
@@ -14,7 +18,7 @@ Release Notes:
 
 0.1.3    11/18/10
 
-- Started state space narrowing optimizations: simple code analyses
+- Started state space narrowing optimizations: simple code analysis
   that reduce narrow the reachable state, thus reducing the
   number of inconclusive results.
 
