--- a/README
+++ b/README
@@ -10,6 +10,7 @@ Release Notes:
 0.1.6    ???
 
 - Made Statement an instance of Show.
+- Bugfix: shadow variable in Label collides with structure name.
 
 0.1.5    11/23/10
 
