--- a/README
+++ b/README
@@ -8,9 +8,9 @@ ImProve generates C code and Simulink models for implementation.
 
 Release Notes:
 
-0.3.2    ???
+0.3.2    04/02/11
 
-- Applies assumptions in all transitions in inductive step (instead of just at the begining).
+- Apply lemmas in all inductive steps except the last (instead of just at the begining).
 - Removed hidden step 1.
 
 0.3.1    03/28/11
